tests/errors/syn.missing-identifier.decl.or
main :: () -> void {
    arr :: struct(:int) {};
    arr;
};
